update resume, add Tailwind, add profile link

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <a
                 href="#"
                 id="menuBtn"
-                class="btn btn-primary text-light display-n"
+                class="btn btn-primary text-light display-n mt-1"
                 >Home</a
               >
             </div>
@@ -275,11 +275,54 @@
         <div
           class="row gap-3 justify-space-between about-us__details align-center"
         >
-          <div class="col-12-sm col-4-lg about__image">
-            <img
-              src="./assets/images/About/about2.jpg"
-              alt="Roland Jethro Suyom"
-            />
+          <div class="col-12-xs col-4-lg">
+            <div class="about__image">
+              <img
+                src="./assets/images/About/about2.jpg"
+                alt="Roland Jethro Suyom"
+              />
+            </div>
+
+            <div
+              class="contact__profiles display-f justify-space-around gap-2 mt-2"
+            >
+              <a
+                class="contact__profile-link h1 text-primary text-hover-primary tooltip"
+                href="https://www.linkedin.com/in/roland-jethro-suyom-198a89207/"
+                target="_blank"
+              >
+                <i class="fa-brands fa-linkedin"></i>
+                <span class="sr-only">link to linkedin website</span>
+                <span class="tooltiptext h5">LinkedIn</span>
+              </a>
+              <a
+                class="contact__profile-link h1 text-primary text-hover-primary tooltip"
+                href="mailto:rolandjethrosuyom@yahoo.com"
+                target="_blank"
+              >
+                <i class="fa-solid fa-envelope"></i>
+                <span class="sr-only">link to email</span>
+                <span class="tooltiptext h5">Email</span>
+              </a>
+              <a
+                class="contact__profile-link h1 text-primary text-hover-primary tooltip"
+                href="https://github.com/Jeth0214"
+                target="_blank"
+              >
+                <i class="fa-brands fa-square-github"></i>
+                <span class="sr-only">link to github website</span>
+                <span class="tooltiptext h5">Github</span>
+              </a>
+              <a
+                class="contact__profile-link h1 text-primary text-hover-primary tooltip"
+                href="https://twitter.com/JethroSuyom"
+                target="_blank"
+              >
+                <i class="fa-brands fa-twitter"></i>
+                <span class="sr-only">link to twitter website</span>
+                <span class="tooltiptext h5">twitter</span>
+              </a>
+            </div>
           </div>
           <div class="col-12-sm col-7-lg about__description">
             <p class="text-light">
@@ -569,7 +612,7 @@
                 <span class="text-primary"
                   ><i class="fa-solid fa-circle-check"></i
                 ></span>
-                <span>Bootstrap</span>
+                <span>Bootstrap/Tailwind </span>
               </li>
               <li class="h3">
                 <span class="text-primary"
