update Readme file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="/assets/images/hero-section/jethcode.png"
       type="image/x-icon"
     />
-    <title>JethCode.</title>
+    <title>JethCode</title>
 
     <!-- Font Awesome -->
     <link
