added google tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
       type="image/x-icon"
     />
     <title>JethCode</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EVDP3D142S"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-EVDP3D142S');
+    </script>
 
     <!-- Font Awesome -->
     <link
