fix search-countries app

--- a/index.html
+++ b/index.html
@@ -10,15 +10,6 @@
       type="image/x-icon"
     />
     <title>JethCode</title>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EVDP3D142S"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
-
-      gtag('config', 'G-EVDP3D142S');
-    </script>
 
     <!-- Font Awesome -->
     <link
@@ -450,7 +441,7 @@
               </div>
               <div class="project__preview-btns">
                 <a
-                  href="https://jeth0214.github.io/Search-Countries-App/countries"
+                  href="https://jeth0214.github.io/Search-Countries-App"
                   target="_blank"
                   class="btn btn-primary text-white mr-3"
                 >
